can create location data in the database

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9,3 +9,7 @@ body{
     height: 100vh; /* Ensure full viewport height */
     margin: 0; /* Remove default margin */
 }
+
+
+/* start the rest of the css below this line */
+
