--- a/views/addlocation.ejs
+++ b/views/addlocation.ejs
@@ -12,12 +12,13 @@
     <div class="locationForm">
         <main>
             <form action="/location/createLocation" method="POST">
+                <!-- the name property in the input element is the one sent in the req.body -->
                 <label for="name">Name:</label><br>
-                <input type="text" name="name"><br>
-                <label for="name">Longitude:</label><br>
-                <input type="text" name="Longitude"><br>
-                <label for="name">Latitude:</label><br>
-                <input type="text" name="Latitude"><br>
+                <input type="text" name="name"><br>  
+                <label for="Longitude">Longitude:</label><br>
+                <input type="text" name="longitude"><br>
+                <label for="Latitude">Latitude:</label><br>
+                <input type="text" name="latitude"><br>
                 <p><button type="submit"> Create location</button></p>
             </form>
         </main>
